# py-syncer

./: .gitignore  README.md  pyproject.toml
syncer/: comparator.py  core.py  handler.py  main.py  scanner.py  service.py
syncer/tests/: conftest.py  test_cli.py  test_scanner.py  test_zhandler.py
